--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2024"
 license = "MIT"
 homepage = "https://github.com/adamisrael/dynamic-power-profile"
 repository = "https://github.com/adamisrael/dynamic-power-profile"
+readme = "README.md"
 
 [dependencies]
 futures = "0.3.31"
